@@ -1,3 +1,9 @@
+2012-08-06 John Wu <John dot Wu at ACM dot org>
+	* src/category.cpp: change tests of the form j < dic.size() to j
+	<= dic.size() because j = dic.size() is a valid code - in an
+	attempt to address a question raised by Greg Barker
+	* src/table.h: clarify the return value of cursor::getColumnAs___
+
 2012-07-30 John Wu <John dot Wu at ACM dot org>
 	* src/i*.cpp: add statements to check for empty data partitions
 	before attempting to build indexes (to address a problem reported
